--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "icon-components-reload": "svgr ./src/assets/svgs -d ./src/components/icons --native"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
@@ -22,7 +23,8 @@
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.0.0-beta.8"
+    "react-native-screens": "^2.0.0-beta.8",
+    "react-native-svg": "^12.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -31,6 +33,7 @@
     "@babel/runtime": "^7.6.2",
     "@bam.tech/react-native-make": "^1.0.3",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@svgr/cli": "^5.2.0",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
