--- a/package.json
+++ b/package.json
@@ -11,34 +11,34 @@
     "icon-components-reload": "svgr ./src/assets/svgs -d ./src/components/icons --native"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.6",
-    "@react-navigation/drawer": "^5.0.6",
-    "@react-navigation/native": "^5.0.6",
-    "@react-navigation/stack": "^5.0.6",
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/drawer": "^5.3.4",
+    "@react-navigation/native": "^5.1.3",
+    "@react-navigation/stack": "^5.2.8",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
-    "native-base": "^2.13.8",
-    "react": "16.9.0",
-    "react-native": "0.61.5",
-    "react-native-gesture-handler": "^1.6.0",
-    "react-native-reanimated": "^1.7.0",
+    "native-base": "^2.13.12",
+    "react": "16.13.1",
+    "react-native": "0.62.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.0.0-beta.8",
+    "react-native-screens": "^2.4.0",
     "react-native-svg": "^12.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/preset-flow": "^7.8.3",
-    "@babel/runtime": "^7.6.2",
-    "@bam.tech/react-native-make": "^1.0.3",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "@svgr/cli": "^5.2.0",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.4",
-    "react-test-renderer": "16.9.0"
+    "@babel/preset-flow": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
+    "@bam.tech/react-native-make": "^2.0.0",
+    "@react-native-community/eslint-config": "^1.0.0",
+    "@svgr/cli": "^5.3.0",
+    "babel-jest": "^25.2.3",
+    "eslint": "^6.8.0",
+    "jest": "^25.2.3",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1"
   },
   "jest": {
     "preset": "react-native"
